--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.2.4",
     "react": "^19.2.4",
     "@google/genai": "^1.38.0",
-    "lucide-react": "^0.563.0"
+    "lucide-react": "^0.563.0",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
